@startuml

hide circle

title User Layer Diagram - Proyecto Saboteur L4
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam shadowing false

package "Presentation Layer" {
  class AchievementRestController
  class UserRestController
  class DevelopersRestController
 class PlayerRestController
}



package "Business Logic Layer" {
 class AchievementService
class UserService
class PlayerService

}

package "Resources Layer" {
class AchievementRepository {
Integer countAchievementsByPlayerId(@Param("playerId") Integer playerId);
Achievement findByTittle(String tittle);
List<Achievement> findAchievementsByCreatorId(@Param("adminId") Integer adminId);
 List<Achievement> findAchievementsByPlayerId(@Param("playerId") Integer playerId);
Optional<Achievement> findById(Integer id);
}
class UserRepository  {
        Optional<User> findByUsername(String username)
Optional<User> findById(Integer id);
Boolean existsByUsername(String username);
Iterable<User> findAllByAuthority(String auth);
    }
class PlayerRepository {
    Optional<Player> findById(Integer id);
    Optional<Player> findByUsername(String username);}
}

UserRestController..> UserService
PlayerRestController..> PlayerService
AchievementRestController..> AchievementService
DevelopersRestController..> UserService
AchievementService..> UserService

UserService..> UserRepository
AchievementService..> AchievementRepository
PlayerService..> PlayerRepository

UserService..> PlayerRepository
@enduml